<resources>
    <string name="app_name">TRIPFUN</string>
    <string name="title_activity_maps">TRIPFUN</string>
    <string name="placename_ori">Địa chỉ đi</string>
    <string name="placename_des">Địa chỉ đến</string>
    <string name="next">Tiếp theo</string>
    <string name="free">FREE</string>
    <string name="title_activity_hello">HelloActivity</string>
    <string name="hello">Xin chào</string>
    <string name="or">hoặc</string>
    <string name="username">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="loginwith">Đăng nhập bằng</string>
    <string name="signin">Đăng nhập</string>
    <string name="signup">Đăng ký tài khoản</string>
    <string name="forgotpass">Quên mật khẩu?</string>
    <string name="notaccount">Không có tài khoản?</string>
    <string name="uptrip">Đăng chuyến</string>
    <string name="findtrip">TÌm chuyến</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
