<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_gradient"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="10"
    tools:context=".Activities.LoginActivity">
    <!-- text Hello -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.3"
        android:gravity="center"
        android:text="@string/hello"
        android:textSize="@dimen/hello" />
    <!-- text login with -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/loginwith"
        android:textSize="10sp"
        />
    <!-- form fb & gg login -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        android:weightSum="10">
        <Button
            android:id="@+id/btn_FBsign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.8"
            android:background="#3C66C4"
            android:text="Facebook"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
        <View
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="0.4"
            />
        <Button
            android:id="@+id/btn_GGsign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.8"
            android:background="#CF4332"
            android:text="Google"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
    </LinearLayout>
    <!-- or -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="horizontal"
        android:weightSum="10"
        android:gravity="center">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="4.5"
            android:background="@color/white" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/or"
            android:gravity="center"
            android:textAllCaps="false" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="4.5"
            android:background="@color/white" />
    </LinearLayout>
    <!-- form default login -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:orientation="vertical"
        android:weightSum="2">
        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/username"/>
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </LinearLayout>
    <!-- btn login and forgot -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.2"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@color/btn_signin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgotpass"/>
    </LinearLayout>
    <!-- btn sign up-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notaccount"/>
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@color/uptrip_bg"/>
    </LinearLayout>
</LinearLayout>