<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- maps -->
    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.FindTripActivity" />
    <!-- form find ori&des -->
    <RelativeLayout
        android:id="@+id/search_form"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/white_border">
        <AutoCompleteTextView
            android:id="@+id/edt_ori_search_FT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/white_border"
            android:inputType="text"
            android:ems="10"
            android:textColor="@color/text_search_address"
            android:textColorHint="@android:color/darker_gray"
            android:paddingStart="35dp"
            android:hint="@string/placename_ori"/>
        <ImageView
            android:id="@+id/img_dir_ori_FT"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_directions_black_24dp"/>
        <AutoCompleteTextView
            android:id="@+id/edt_des_search_FT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/edt_ori_search_FT"
            android:background="@drawable/white_border"
            android:inputType="text"
            android:ems="10"
            android:textColor="@color/text_search_address"
            android:textColorHint="@android:color/darker_gray"
            android:paddingStart="35dp"
            android:hint="@string/placename_des"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_below="@id/img_dir_ori_FT"
            android:src="@drawable/ic_directions_black_24dp"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btnFindTrip_FT"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:text="@string/findtrip"
        android:textColor="@color/text_search_address"
        android:background="@color/white"
        />
</RelativeLayout>