<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MapsActivity" />
    <RelativeLayout
        android:id="@+id/search_form"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/white_border">
        <AutoCompleteTextView
            android:id="@+id/edt_ori_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/white_border"
            android:inputType="text"
            android:ems="10"
            android:textColor="@color/text_search_address"
            android:textColorHint="@android:color/darker_gray"
            android:paddingStart="35dp"
            android:hint="@string/placename_ori"/>
        <ImageButton
            android:id="@+id/search_ori"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/white_border"
            android:onClick="location_search"
            android:src="@drawable/ic_search_black_24dp"/>
        <ImageView
            android:id="@+id/img_dir_ori"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_directions_black_24dp"/>
        <AutoCompleteTextView
            android:id="@+id/edt_des_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/edt_ori_search"
            android:background="@drawable/white_border"
            android:inputType="text"
            android:ems="10"
            android:textColor="@color/text_search_address"
            android:textColorHint="@android:color/darker_gray"
            android:paddingStart="35dp"
            android:hint="@string/placename_des"/>
        <ImageButton
            android:id="@+id/search_des"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/search_ori"
            android:layout_alignParentRight="true"
            android:background="@drawable/white_border"
            android:onClick="location_search"
            android:src="@drawable/ic_search_black_24dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_below="@id/img_dir_ori"
            android:src="@drawable/ic_directions_black_24dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/next"
        android:textColor="@color/text_search_address"
        android:background="@drawable/white_border"
        />

</RelativeLayout>